--- a/age.css
+++ b/age.css
@@ -1,6 +1,6 @@
 body{
   margin:0;
-  background-image: url('image-gallery/1702212598108.jpg');
+  background-color:#00ff00;
   background-position:center;
   background-repeat:no-repeat;
   background-size:cover;
@@ -17,7 +17,7 @@ body{
   font-family: Arial, Helvetica, sans-serif;
   font-size: x-large;
   text-decoration: solid;
-  color:yellow;
+  color:white;
   border-style:solid;
   border-color:red;
   border-width: 5px;
