--- a/age.css
+++ b/age.css
@@ -70,7 +70,7 @@ body {
   margin-left:0;
   background-color:white;
   border-style:solid;
-  background-image: url('images/1703175037858.jpg');
+  background-image: url('images/1703174885822.jpg');
   background-size:115px 120px;
   background-repeat: no-repeat;
   background-position:center;
@@ -143,10 +143,17 @@ body {
     margin-left:0;
     display:absolute;
     width:100%;
+    height:112px;
   
   }
   .heading{
     padding:0;
+  }
+  .date{
+    margin-top:-170px;
+  }
+  .display-picture{
+    margin-top:37px;
   }
 }
 button{
@@ -185,7 +192,7 @@ button{
 }
 @media (max-width:328px){
   .date{
-    margin-top:-230px;
+    margin-top:-220px;
     margin-left:120px;
   }
   .upload-button{
@@ -193,5 +200,9 @@ button{
   }
   .reset{
     margin-left:5px;
+  }
+  .details{
+    height:234px;
+    margin-top:269px;
   }
 }
